[package]
name = "carbon_14"
authors = ["Johannes Naylor <jonaylor89@gmail.com>"]
description = "OSINT dating tool for web pages"
license = "MIT"
repository = "https://github.com/jonaylor89/carbon14"
readme = "README.md"
keywords = ["osint", "web", "reconnaiance", "carbon14"]
version = "0.1.1"
edition = "2021"

[dependencies]
chrono = "0.4.38"
chrono-tz = "0.10.0"
clap = { version = "4.5.18", features = ["derive"] }
color-eyre = { features = ["track-caller"], default-features = false, version = "0.6.3" }
colored = "2.1.0"
reqwest = "0.12.7"
scraper = "0.20.0"
tokio = { version = "1.40.0", features = ["macros", "rt"] }
url = "2.5.2"
